This file summarizes the major and interesting changes for each release.
For a detailed list of changes, please see ChangeLog.

0.54 (UNRELEASED)

 * Enhancements:
   - Clear the clipboard when locking or closing the window.
     Do not clear clipboard content from another program.

 * Bug fixes:

0.53 (2019-09-22)

 * Enhancements:
   - Double click on tree item toggles folder expanded state or copies password.
   - On enter, toggles folder expanded state or opens password entry for edit.
   - Navigate tree with left & right key presses: toggling expanded state or going to parent / child.

 * Bug fixes:
   - Fixed bug in set_tree_expansion which could result in only partial expansion of the tree.
   - goto_uuid now also correctly displays folders.

0.52 (2019-09-19)

 * Enhancements:
   - Show copy menu items first in the tree item context menu
   - Display username in the tree view item title

 * Bug fixes:
   - Fix copy truncates password containing pound sign (LP: #1819141)

0.51 (2017-12-20)

 * Enhancements:
   - Switch folder icon to symbolic icon
   - Updated translations

 * Bug fixes:

0.50 (2017-12-19)

 * Enhancements:
   - Set window title based on current loaded file. Thanks to Tristan Hill.
   - Switch to symbolic icons
   - Updated translations

 * Bug fixes:
   - Make password window non-resizable
   - Escape text e.g. in case of & in entry name. Thanks to Tristan Hill.
   - Fix issue where Pasaffe would think a save was required when no fields
     were changed in an entry.
   - Fix some untranslated strings. (LP: #1691668)
   - Updated deprecated Gtk widgets.
   - Properly support popup menus on Wayland.

0.49 (2017-05-17)

 * Enhancements:
   - Updated translations
   - Add support for opening psafe3 files from the file manager. Thanks to
     Tristan Hill.

 * Bug fixes:
   - Raised password iteration limit from 50k to 100k. Thanks to
     Joshua C. Randall. (LP: #1689784)

0.48 (2017-03-13)

 * Enhancements:

 * Bug fixes: